--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  body {
+    @apply m-0 p-0 overflow-hidden;
+  }
+}
+
 @layer utilities {
   image {
     transition: all 200ms;
